NEED TO LEARN PLT OR AT LEAST TENSORBOARD

--- a/idea2_CNN_fixed.ipynb
+++ b/idea2_CNN_fixed.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "idea2_CNN_fixed.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM77GASAbyaM7zW0zj2bkkp"
+      "authorship_tag": "ABX9TyMhn0sbwQCMaCTJeqlXuF33",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,10 +14,19 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Barleysack/tensor101/blob/Project_1/idea2_CNN_fixed.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -287,6 +297,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "K85q59YpMzbj"
+      },
+      "source": [
+        "#model have to be re-builded to get the data as image;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 638
@@ -305,7 +326,7 @@
         "fig, axes = plt.subplots(num_row, num_col, figsize=(1.5*num_col,2*num_row))\n",
         "for i in range(num):\n",
         "    ax = axes[i//num_col, i%num_col]\n",
-        "    ax.imshow(images[i], cmap='gray')\n",
+        "    \n",
         "    ax.set_title('Label: {}'.format(labels[i]))\n",
         "plt.tight_layout()\n",
         "plt.show()"
@@ -349,7 +370,7 @@
         "id": "3DEhQDwomAe3"
       },
       "source": [
-        ""
+        "#Need work; PLT"
       ],
       "execution_count": null,
       "outputs": []
